--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <h1>La Cuillere</h1>
+    <p>Now is <%= Time.now %><p>
     <%= yield %>
+    <p>A very simple footer</p>
   </body>
 </html>
